--- a/storeManage.html
+++ b/storeManage.html
@@ -106,6 +106,31 @@
                 top: -15px;
                 left: 174px;
             }
+
+        /*  -------------------------------------------------------------------------------------------------  */
+            .viewStoreTableTitle{
+                position: relative;
+                top: 152px;
+                left: 69.5rem;
+
+                width: fit-content;
+            }
+
+            .storeTable{
+                position: relative;
+                top: 161px;
+
+                margin: auto;
+                width: 82vw;
+            }
+
+            .tableTitleSubDiv{
+                width: 250px;
+            }
+
+            .tableTitleParentDiv{
+                width: 1300px;
+            }
         }
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
@@ -169,6 +194,31 @@
 
             .textAlignCenter{
                 text-align: center;
+            }
+
+        /*  --------------------------------------------------------------------------------------------------  */
+            .viewStoreTableTitle{
+                position: relative;
+                top: 152px;
+                left: 69.5rem;
+
+                width: fit-content;
+            }
+
+            .storeTable{
+                position: relative;
+                top: 161px;
+
+                margin: auto;
+                width: 82vw;
+            }
+
+            .tableTitleSubDiv{
+                width: 250px;
+            }
+
+            .tableTitleParentDiv{
+                width: 1300px;
             }
         }
     </style>
