--- a/customerManage.html
+++ b/customerManage.html
@@ -30,7 +30,141 @@
 
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
+            /*header*/
+            /*  header profile image  */
+            .profile{
+                width: 78px;
+                height: 75px;
 
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: -2rem;
+            }
+
+            #dropdownList{
+                width: 248px;
+                height: 400px;
+                margin: 0;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .position{
+                position: relative;
+                left: -8rem;
+                font-size: 19px;
+            }
+
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
+
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: 62px;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            /*--------------------------------------------------------------------------------------------*/
+            .newButton{
+                background-color: #03A100;
+                margin-right: 15px;
+                width: 110px;
+            }
+
+            .updateButton{
+                margin-right: 15px;
+                width: 110px;
+            }
+
+            .removeButton{
+                width: 110px;
+            }
+
+            .whiteTextColor{
+                -webkit-text-fill-color: white;
+            }
+
+            .noBorder{
+                border: 0;
+            }
+
+            .relativePosition{
+                position: relative;
+            }
+
+            .absolutePosition{
+                position: absolute;
+            }
+
+            #crudButton{
+                top: 108px;
+                left: 124px;
+
+                width:600px;
+            }
+
+            /*customer table*/
+
+            .viewCustomerTitle{
+                position: relative;
+                top: 151px;
+                left: 66rem;
+
+                width: fit-content;
+            }
+
+            .customerTable{
+                position: relative;
+                top: 198px;
+
+                margin: auto;
+                width: 82vw;
+            }
+
+            /*modal*/
+
+            .margin-bottom{
+                margin-bottom: 10px;
+            }
+
+            .saveChanges{
+                background-color: #590067;
+                border: 0;
+            }
+
+            .close{
+                background-color: #ED6400;
+                border: 0;
+            }
         }
 
         /* Styles for Laptop Large (1025px to 1366px) */
