1024 customer page responsive table header content width

--- a/customerManage.html
+++ b/customerManage.html
@@ -32,6 +32,14 @@
         @media all and (min-width: 769px) and (max-width: 1024px) {
             /*header*/
             /*  header profile image  */
+
+            .headerPosition{
+                position: relative;
+                left: 190px;
+                top: 15px;
+                width: fit-content;
+            }
+
             .profile{
                 width: 78px;
                 height: 75px;
@@ -42,7 +50,7 @@
 
                 position: relative;
                 top: -15px;
-                left: -2rem;
+                left: 5rem;
             }
 
             #dropdownList{
@@ -73,7 +81,7 @@
             #profileDropdown{
                 width: 75px;
                 position: relative;
-                left: 62px;
+                left: 44px;
             }
 
             .signup{
