--- a/storeManage.html
+++ b/storeManage.html
@@ -32,7 +32,103 @@
 
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
 
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: 120px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+                position: absolute;
+                left: -190px;
+            }
+
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 150px;
+                top: 15px;
+                width: fit-content;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: -8px;
+            }
+
+            /*  -------------------------------------------------------------------------------------------------  */
+            .viewStoreTableTitle{
+                position: relative;
+                top: 152px;
+                left: 50.3rem;
+
+                width: fit-content;
+            }
+
+            .storeTable{
+                position: relative;
+                top: 161px;
+
+                margin: auto;
+                width: 82vw;
+            }
+
+            .tableTitleSubDiv{
+                width: 250px;
+            }
+
+            .tableTitleParentDiv{
+                width: 500px;
+            }
         }
 
         /* Styles for Laptop Large (1025px to 1366px) */
