store page device responsive

--- a/storeManage.html
+++ b/storeManage.html
@@ -12,22 +12,204 @@
 
         /* Styles for Mobile Small (up to 320px) */
         @media all and (max-width: 320px) {
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
 
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: 120px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+                position: absolute;
+                left: -190px;
+            }
+
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 150px;
+                top: 15px;
+                width: fit-content;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: -8px;
+            }
+
+            /*  -------------------------------------------------------------------------------------------------  */
+            .viewStoreTableTitle{
+                position: relative;
+                top: 152px;
+                left: 760px;
+
+                width: fit-content;
+            }
+
+            .storeTable{
+                position: relative;
+                top: 161px;
+
+                margin: auto;
+                width: 82vw;
+            }
+
+            .tableTitleSubDiv{
+                width: 250px;
+            }
+
+            .tableTitleParentDiv{
+                width: 500px;
+            }
         }
 
-        /* Styles for Mobile Medium (321px to 375px) */
-        @media all and (min-width: 321px) and (max-width: 375px) {
+         /*Styles for Tablet (426px to 768px) */
+        @media all and (min-width: 300px) and (max-width: 768px) {
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
 
-        }
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: 120px;
+            }
 
-        /* Styles for Mobile Large (376px to 425px) */
-        @media all and (min-width: 376px) and (max-width: 425px) {
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+                position: absolute;
+                left: -190px;
+            }
 
-        }
+            #dropdownImage{
 
-        /* Styles for Tablet (426px to 768px) */
-        @media all and (min-width: 426px) and (max-width: 768px) {
+                width: 170px;
+                height: 150px;
 
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 150px;
+                top: 15px;
+                width: fit-content;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: -8px;
+            }
+
+            /*  -------------------------------------------------------------------------------------------------  */
+            .viewStoreTableTitle{
+                position: relative;
+                top: 152px;
+                left: 760px;
+
+                width: fit-content;
+            }
+
+            .storeTable{
+                position: relative;
+                top: 161px;
+
+                margin: auto;
+                width: 82vw;
+            }
+
+            .tableTitleSubDiv{
+                width: 250px;
+            }
+
+            .tableTitleParentDiv{
+                width: 500px;
+            }
         }
 
         /* Styles for Laptop (769px to 1024px) */
@@ -109,7 +291,7 @@
             .viewStoreTableTitle{
                 position: relative;
                 top: 152px;
-                left: 50.3rem;
+                left: 798px;
 
                 width: fit-content;
             }
