--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -11,26 +11,245 @@
 
         /* Styles for Mobile Small (up to 320px) */
         @media all and (max-width: 320px) {
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
 
-        }
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: -65px;
+            }
 
-        /* Styles for Mobile Medium (321px to 375px) */
-        @media all and (min-width: 321px) and (max-width: 375px) {
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+            }
 
-        }
+            #dropdownImage{
 
-        /* Styles for Mobile Large (376px to 425px) */
-        @media all and (min-width: 376px) and (max-width: 425px) {
+                width: 170px;
+                height: 150px;
 
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 130px;
+                top: 15px;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 178px;
+            }
+
+
+            /*  --------------------------------------------------------------------------------------------------  */
+
+            .placeOrderForm{
+                padding-top: 10px;
+            }
+
+            .titleOrder{
+                position: relative;
+                top: 10%;
+            }
+
+            #line1{
+                background-color: gray;
+                width: 19rem;
+                height: 1px;
+
+                opacity: 50%;
+
+                position: relative;
+                top: -20px;
+                left: 158px;
+            }
+
+            #line2{
+                background-color: gray;
+                width: 980px;
+                height: 1px;
+
+                transform: rotate(90deg);
+
+                opacity: 50%;
+
+                position: relative;
+                left: 16.8rem;
+                top: -25rem;
+            }
+
+            .margin-bottom{
+                margin-bottom: 20px;
+            }
+
+            .marginZero{
+                margin: 0;
+            }
+
+            .inputFieldMargin{
+                margin-left: 27px;
+            }
+
+            .placeOrderForm{
+                padding: 50px;
+            }
+
+            #addToCartBtn{
+                position: absolute;
+                right: 53.9%;
+
+                background-color: #6F0082;
+                border: 0;
+
+            }
+
+            /*Billing Section*/
+
+            .itemsDetails{
+                /*width: 612px;*/
+                margin: 40px;
+
+                position: relative;
+                top: -8rem;
+            }
+
+            .itemsDetails{
+                max-height: 340px; /* Set the maximum height of the container */
+                overflow-y: auto; /* Enable vertical scrolling */
+            }
+
+            .itemsDetails{
+                table-layout: fixed; /* Prevent the table from resizing its columns */
+                white-space: nowrap; /* Prevent text wrapping */
+                overflow-x: auto; /* Enable horizontal scrolling */
+                overflow-y: scroll;
+            }
+
+            #itemPriceListMainDiv{
+                position: absolute;
+                top: 0;
+                right: 0;
+                margin-right: 38px;
+            }
+
+            .prices{
+                text-align: right;
+            }
+
+            .titleBill{
+                left: 32%;
+                top: -8rem;
+                -webkit-text-fill-color: #590067;
+                width: fit-content;
+            }
+
+            .fonts-size{
+                font-size: 23px;
+                width: fit-content;
+            }
+
+            #pricesMainDiv{
+                position: relative;
+                top: -8rem;
+            }
+
+            #bill{
+                position: absolute;
+                left: 50%;
+                top: 5%;
+            }
+
+            .billPricesLabel{
+                width: fit-content;
+
+                position: absolute;
+                top: 0;
+                left: 40px;
+            }
+
+            .billPrices{
+                position: absolute;
+                right: 0;
+            }
+
+            .pricesContentPosition{
+                padding-right: 50px;
+            }
+
+            #billBtn{
+                position: relative;
+                top: 5.1rem;
+                left: 2rem;
+                padding-left: 15rem;
+                width: 200px;
+            }
+
+            .btnSize{
+                width: 150px;
+            }
+
+            #cancelBtn{
+                background-color: #ED6400;
+                border: 0;
+                position: absolute;
+                left: 65px;
+            }
+
+            #purchaseBtn{
+                background-color: #03A100;
+                border: 0;
+                position: absolute;
+                left: 235px;
+            }
+
+            .purpleTextColor{
+                -webkit-text-fill-color: #590067;
+            }
         }
 
         /* Styles for Tablet (426px to 768px) */
         @media all and (min-width: 426px) and (max-width: 768px) {
-
-        }
-
-        /* Styles for Laptop (769px to 1024px) */
-        @media all and (min-width: 769px) and (max-width: 1024px) {
             #GroStore{
                 font-size: 24px;
                 -webkit-text-fill-color: purple;
@@ -260,6 +479,245 @@
             }
         }
 
+        /* Styles for Laptop (769px to 1024px) */
+        @media all and (min-width: 769px) and (max-width: 1024px) {
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
+
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: -65px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+            }
+
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 130px;
+                top: 15px;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 178px;
+            }
+
+
+            /*  --------------------------------------------------------------------------------------------------  */
+
+            .placeOrderForm{
+                padding-top: 10px;
+            }
+
+            .titleOrder{
+                position: relative;
+                top: 10%;
+            }
+
+            #line1{
+                background-color: gray;
+                width: 19rem;
+                height: 1px;
+
+                opacity: 50%;
+
+                position: relative;
+                top: -20px;
+                left: 158px;
+            }
+
+            #line2{
+                background-color: gray;
+                width: 980px;
+                height: 1px;
+
+                transform: rotate(90deg);
+
+                opacity: 50%;
+
+                position: relative;
+                left: 16.8rem;
+                top: -25rem;
+            }
+
+            .margin-bottom{
+                margin-bottom: 20px;
+            }
+
+            .marginZero{
+                margin: 0;
+            }
+
+            .inputFieldMargin{
+                margin-left: 27px;
+            }
+
+            .placeOrderForm{
+                padding: 50px;
+            }
+
+            #addToCartBtn{
+                position: absolute;
+                right: 53.9%;
+
+                background-color: #6F0082;
+                border: 0;
+
+            }
+
+            /*Billing Section*/
+
+            .itemsDetails{
+                /*width: 612px;*/
+                margin: 40px;
+
+                position: relative;
+                top: -8rem;
+            }
+
+            .itemsDetails{
+                max-height: 340px; /* Set the maximum height of the container */
+                overflow-y: auto; /* Enable vertical scrolling */
+            }
+
+            .itemsDetails{
+                table-layout: fixed; /* Prevent the table from resizing its columns */
+                white-space: nowrap; /* Prevent text wrapping */
+                overflow-x: auto; /* Enable horizontal scrolling */
+                overflow-y: scroll;
+            }
+
+            #itemPriceListMainDiv{
+                position: absolute;
+                top: 0;
+                right: 0;
+                margin-right: 38px;
+            }
+
+            .prices{
+                text-align: right;
+            }
+
+            .titleBill{
+                left: 32%;
+                top: -8rem;
+                -webkit-text-fill-color: #590067;
+                width: fit-content;
+            }
+
+            .fonts-size{
+                font-size: 23px;
+                width: fit-content;
+            }
+
+            #pricesMainDiv{
+                position: relative;
+                top: -8rem;
+            }
+
+            #bill{
+                position: absolute;
+                left: 50%;
+                top: 25%;
+            }
+
+            .billPricesLabel{
+                width: fit-content;
+
+                position: absolute;
+                top: 0;
+                left: 40px;
+            }
+
+            .billPrices{
+                position: absolute;
+                right: 0;
+            }
+
+            .pricesContentPosition{
+                padding-right: 50px;
+            }
+
+            #billBtn{
+                position: relative;
+                top: 5.1rem;
+                left: 2rem;
+                padding-left: 15rem;
+                width: 200px;
+            }
+
+            .btnSize{
+                width: 150px;
+            }
+
+            #cancelBtn{
+                background-color: #ED6400;
+                border: 0;
+                position: absolute;
+                left: 65px;
+            }
+
+            #purchaseBtn{
+                background-color: #03A100;
+                border: 0;
+                position: absolute;
+                left: 235px;
+            }
+
+            .purpleTextColor{
+                -webkit-text-fill-color: #590067;
+            }
+        }
+
         /* Styles for Laptop Large (1025px to 1366px) */
         @media all and (min-width: 1025px) and (max-width: 1366px) {
             #GroStore{
@@ -338,6 +796,7 @@
             .titleOrder{
                 position: absolute;
                 top: 22%;
+                width: fit-content;
             }
 
             #line1{
@@ -427,10 +886,12 @@
             .titleBill{
                 left: 35%;
                 -webkit-text-fill-color: #590067;
+                width: 200px;
             }
 
             .fonts-size{
                 font-size: 25px;
+                width: 200px;
             }
 
             #pricesMainDiv{
@@ -498,7 +959,7 @@
 
                 position: relative;
                 top: -15px;
-                left: 8.8rem;
+                left: 20rem;
             }
 
             #dropdownList{
@@ -518,6 +979,7 @@
                 position: relative;
                 left: 1rem;
                 font-size: 19px;
+                width: 600px;
             }
 
             #GroStore{
@@ -592,10 +1054,10 @@
     </section>
     <section>
         <div class="col-6 placeOrderForm">
-            <div class="titleOrder">
-                <h3 class="purpleTextColor">Place Your Orders</h3>
-            </div>
             <form class="row g-3 ">
+                <div class="titleOrder col-12">
+                    <h3 class="purpleTextColor">Place Your Orders</h3>
+                </div>
                 <div class="col-12 margin-bottom">
                     <label for="inputOrderId" class="form-label">Order Id :</label>
                     <input type="text" class="form-control" id="inputOrderId" placeholder="O001">
@@ -661,10 +1123,9 @@
                     <button id="addToCartBtn" type="submit" class="btn btn-primary btnSize"> Add To Cart</button>
                 </div>
                 <div id="line2"></div>
-            </form>
 
-            <div class="col-6 relativePosition" id="bill">
-                <div class="titleBill titleOrder">
+            <div class="col-6" id="bill">
+                <div id="subDiv" class="titleBill titleOrder">
                     <h5 class="fonts-size">Billing Your Order</h5>
                 </div>
 
@@ -727,6 +1188,7 @@
                     <button id="purchaseBtn" type="submit" class="btn btn-primary inputFieldMargin btnSize"> Purchase</button>
                 </div>
             </div>
+            </form>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
