--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </button>
 
                     <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
-                        <div class="navbar-nav position ">
+                        <div class="navbar-nav position container topBotomBordersIn">
                             <a class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
