dashboard fonts change

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </section>
 
 <section class="">
-    <div class="row margin">
+    <div class="row margin fonts">
         <div id="div1" class="card shadow col-xs card-container">
             <div>
                 <h2 class="cardText">00</h2>
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <div class="tableDiv orderDetailTable">
+    <div class="tableDiv orderDetailTable fonts">
         <table class="table">
             <thead>
             <tr>
@@ -338,7 +338,7 @@
     </div>
 </section>
 
-<footer class="margin padding position footer">
+<footer class="margin padding position footer fonts">
     <div class="margin padding">
         <div class="row margin padding">
             <div id="mainDivF" class="position">
