--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -729,7 +729,7 @@
             #profileDropdown{
                 width: 75px;
                 position: relative;
-                left: 160px;
+                left: -10px;
             }
 
             #dropdownList{
@@ -754,13 +754,13 @@
             .profileDetail{
                 -webkit-text-fill-color: gray;
                 position: relative;
-                left: 60px;
+                left: 40px;
                 width: fit-content;
             }
 
             .signup{
                 -webkit-text-fill-color: #0066FF;
-                margin-top: 20px;
+                margin-top: 28px;
             }
 
             .logout{
@@ -773,8 +773,8 @@
 
             .headerPosition{
                 position: relative;
-                left: 278px;
-                top: 15px;
+                left: 152px;
+                top: 15.5px;
             }
 
             .profile{
@@ -787,7 +787,7 @@
 
                 position: relative;
                 top: -15px;
-                left: 174px;
+                left: 162px;
             }
 
 
@@ -891,7 +891,7 @@
 
             .fonts-size{
                 font-size: 25px;
-                width: 200px;
+                width: 220px;
             }
 
             #pricesMainDiv{
@@ -906,7 +906,7 @@
             }
 
             .billPricesLabel{
-                width: fit-content;
+                width: 280px;
 
                 position: absolute;
                 top: 0;
@@ -1020,13 +1020,13 @@
             <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a id="GroStore" class="navbar-brand" href="#">GroStore</a>
+                        <a id="DashGroStore" class="navbar-brand" href="#">GroStore</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
                         <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
-                            <div class="navbar-nav position ">
+                            <div class="navbar-nav position container topBotomBordersIn">
                                 <a class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
