1440 device responsive bug fix

--- a/storeManage.html
+++ b/storeManage.html
@@ -415,39 +415,6 @@
 
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
-            /*  header profile image  */
-            .profile{
-                width: 78px;
-                height: 75px;
-
-                border-radius: 100%;
-                margin: 0;
-                padding: 0;
-
-                position: relative;
-                top: -15px;
-                left: 8.8rem;
-            }
-
-            #dropdownList{
-                width: 248px;
-                height: 400px;
-                margin: 0;
-            }
-
-            .profileDetail{
-                -webkit-text-fill-color: gray;
-                position: relative;
-                left: 60px;
-                width: fit-content;
-            }
-
-            .position{
-                position: relative;
-                left: 1rem;
-                font-size: 19px;
-            }
-
             #GroStore{
                 font-size: 24px;
                 -webkit-text-fill-color: purple;
@@ -457,7 +424,33 @@
             #profileDropdown{
                 width: 75px;
                 position: relative;
-                left: 140px;
+                left: -10px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+            }
+
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 40px;
+                width: fit-content;
             }
 
             .signup{
@@ -473,17 +466,33 @@
                 margin-bottom: 20px;
             }
 
-            .textAlignCenter{
-                text-align: center;
+            .headerPosition{
+                position: relative;
+                left: 152px;
+                top: 15.5px;
             }
 
-        /*  --------------------------------------------------------------------------------------------------  */
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 252px;
+            }
+
+            /*  -------------------------------------------------------------------------------------------------  */
             .viewStoreTableTitle{
                 position: relative;
                 top: 152px;
-                left: 69.5rem;
+                left: 73.5rem;
 
                 width: fit-content;
+                font: 24px Raleway;
             }
 
             .storeTable{
@@ -492,6 +501,7 @@
 
                 margin: auto;
                 width: 82vw;
+                font: 15px Raleway;
             }
 
             .tableTitleSubDiv{
