--- a/customerManage.html
+++ b/customerManage.html
@@ -306,6 +306,78 @@
 
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
+            /*header*/
+            /*  header profile image  */
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 252px;
+            }
+
+            #dropdownList{
+                width: 248px;
+                height: 400px;
+                margin: 0;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 40px;
+                width: fit-content;
+            }
+
+            .position{
+                position: relative;
+                left: 1rem;
+                font-size: 19px;
+            }
+
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
+
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: -10px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 127px;
+                top: 15.5px;
+                height: 107px;
+            }
+
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            /*--------------------------------------------------------------------------------------------*/
             .newButton{
                 background-color: #03A100;
                 margin-right: 15px;
@@ -349,7 +421,7 @@
             .viewCustomerTitle{
                 position: relative;
                 top: 151px;
-                left: 70rem;
+                left: 71.5rem;
 
                 width: fit-content;
             }
@@ -376,68 +448,6 @@
             .close{
                 background-color: #ED6400;
                 border: 0;
-            }
-
-        /*  header profile image  */
-            .profile{
-                width: 78px;
-                height: 75px;
-
-                border-radius: 100%;
-                margin: 0;
-                padding: 0;
-
-                position: relative;
-                top: -15px;
-                left: 8.8rem;
-            }
-
-            #dropdownList{
-                width: 248px;
-                height: 400px;
-                margin: 0;
-            }
-
-            .profileDetail{
-                -webkit-text-fill-color: gray;
-                position: relative;
-                left: 60px;
-                width: fit-content;
-            }
-
-            .position{
-                position: relative;
-                left: 1rem;
-                font-size: 19px;
-            }
-
-            #GroStore{
-                font-size: 24px;
-                -webkit-text-fill-color: purple;
-                font-weight: bold;
-            }
-
-            #profileDropdown{
-                width: 75px;
-                position: relative;
-                left: 140px;
-            }
-
-            .signup{
-                -webkit-text-fill-color: #0066FF;
-                margin-top: 20px;
-            }
-
-            .logout{
-                text-align: center;
-                -webkit-text-fill-color: #590067;
-                font-weight: bold;
-
-                margin-bottom: 20px;
-            }
-
-            .textAlignCenter{
-                text-align: center;
             }
         }
     </style>
