--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
 
     <style>
+        @media all and (min-width: 1367px) and (max-width: 1440px) {
+            .profile{
+                width: 78px;
+                height: 75px;
 
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 251px;
+            }
+        }
     </style>
 </head>
 <body>
