1024 device responsive bug fix

--- a/customerManage.html
+++ b/customerManage.html
@@ -11,16 +11,9 @@
 
         /* Styles for Laptop (769px to 1024px) */
         @media all and (min-width: 769px) and (max-width: 1024px) {
+
             /*header*/
             /*  header profile image  */
-
-            .headerPosition{
-                position: relative;
-                left: 190px;
-                top: 15px;
-                width: fit-content;
-            }
-
             .profile{
                 width: 78px;
                 height: 75px;
@@ -31,7 +24,7 @@
 
                 position: relative;
                 top: -15px;
-                left: 5rem;
+                left: 156px;
             }
 
             #dropdownList{
@@ -43,13 +36,13 @@
             .profileDetail{
                 -webkit-text-fill-color: gray;
                 position: relative;
-                left: 60px;
+                left: 40px;
                 width: fit-content;
             }
 
             .position{
                 position: relative;
-                left: -8rem;
+                left: 1rem;
                 font-size: 19px;
             }
 
@@ -62,8 +55,16 @@
             #profileDropdown{
                 width: 75px;
                 position: relative;
-                left: 44px;
+                left: -110px;
             }
+
+            .headerPosition{
+                position: relative;
+                left: -20.7px;
+                top: 15.5px;
+                height: 107px;
+            }
+
 
             .signup{
                 -webkit-text-fill-color: #0066FF;
@@ -126,7 +127,7 @@
             .viewCustomerTitle{
                 position: relative;
                 top: 151px;
-                left: 46.7rem;
+                left: 47.9rem;
 
                 width: fit-content;
             }
