--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -490,7 +490,7 @@
             #profileDropdown{
                 width: 75px;
                 position: relative;
-                left: -65px;
+                left: -128px;
             }
 
             #dropdownList{
@@ -515,13 +515,13 @@
             .profileDetail{
                 -webkit-text-fill-color: gray;
                 position: relative;
-                left: 60px;
+                left: 40px;
                 width: fit-content;
             }
 
             .signup{
                 -webkit-text-fill-color: #0066FF;
-                margin-top: 20px;
+                margin-top: 28px;
             }
 
             .logout{
@@ -534,8 +534,8 @@
 
             .headerPosition{
                 position: relative;
-                left: 130px;
-                top: 15px;
+                left: 2px;
+                top: 15.5px;
             }
 
             .profile{
@@ -548,19 +548,15 @@
 
                 position: relative;
                 top: -15px;
-                left: 178px;
+                left: 158px;
             }
-
 
             /*  --------------------------------------------------------------------------------------------------  */
 
-            .placeOrderForm{
-                padding-top: 10px;
-            }
-
             .titleOrder{
-                position: relative;
-                top: 10%;
+                position: absolute;
+                top: 22%;
+                width: fit-content;
             }
 
             #line1{
@@ -577,7 +573,7 @@
 
             #line2{
                 background-color: gray;
-                width: 980px;
+                width: 45rem;
                 height: 1px;
 
                 transform: rotate(90deg);
@@ -585,8 +581,8 @@
                 opacity: 50%;
 
                 position: relative;
-                left: 16.8rem;
-                top: -25rem;
+                left: 16rem;
+                top: -19rem;
             }
 
             .margin-bottom{
@@ -621,7 +617,7 @@
                 margin: 40px;
 
                 position: relative;
-                top: -8rem;
+                top: 7rem;
             }
 
             .itemsDetails{
@@ -648,20 +644,19 @@
             }
 
             .titleBill{
-                left: 32%;
-                top: -8rem;
+                left: 150px;
                 -webkit-text-fill-color: #590067;
-                width: fit-content;
+                width: 200px;
             }
 
             .fonts-size{
-                font-size: 23px;
-                width: fit-content;
+                font-size: 25px;
+                width: 220px;
             }
 
             #pricesMainDiv{
                 position: relative;
-                top: -8rem;
+                top: 6rem;
             }
 
             #bill{
@@ -671,7 +666,7 @@
             }
 
             .billPricesLabel{
-                width: fit-content;
+                width: 280px;
 
                 position: absolute;
                 top: 0;
@@ -689,10 +684,8 @@
 
             #billBtn{
                 position: relative;
-                top: 5.1rem;
-                left: 2rem;
-                padding-left: 15rem;
-                width: 200px;
+                top: 16.7rem;
+                padding-left: 11rem;
             }
 
             .btnSize{
@@ -702,15 +695,18 @@
             #cancelBtn{
                 background-color: #ED6400;
                 border: 0;
-                position: absolute;
-                left: 65px;
+
+                position: relative;
+                left: -100px;
             }
 
             #purchaseBtn{
                 background-color: #03A100;
                 border: 0;
-                position: absolute;
-                left: 235px;
+
+                position: relative;
+                left: 60px;
+                top: -35px;
             }
 
             .purpleTextColor{
@@ -1017,7 +1013,6 @@
                 top: -15px;
                 left: 252px;
             }
-
 
             /*  --------------------------------------------------------------------------------------------------  */
 
