--- a/storeManage.html
+++ b/storeManage.html
@@ -223,14 +223,12 @@
             #profileDropdown{
                 width: 75px;
                 position: relative;
-                left: 120px;
+                left: -128px;
             }
 
             #dropdownList{
                 width: 250px;
                 height: 400px;
-                position: absolute;
-                left: -190px;
             }
 
             #dropdownImage{
@@ -250,7 +248,7 @@
             .profileDetail{
                 -webkit-text-fill-color: gray;
                 position: relative;
-                left: 60px;
+                left: 40px;
                 width: fit-content;
             }
 
@@ -269,9 +267,8 @@
 
             .headerPosition{
                 position: relative;
-                left: 150px;
-                top: 15px;
-                width: fit-content;
+                left: 2px;
+                top: 15.5px;
             }
 
             .profile{
@@ -284,16 +281,17 @@
 
                 position: relative;
                 top: -15px;
-                left: -8px;
+                left: 158px;
             }
 
             /*  -------------------------------------------------------------------------------------------------  */
             .viewStoreTableTitle{
                 position: relative;
                 top: 152px;
-                left: 798px;
+                left: 49.8rem;
 
                 width: fit-content;
+                font: 24px Raleway;
             }
 
             .storeTable{
@@ -302,6 +300,7 @@
 
                 margin: auto;
                 width: 82vw;
+                font: 15px Raleway;
             }
 
             .tableTitleSubDiv{
@@ -309,7 +308,7 @@
             }
 
             .tableTitleParentDiv{
-                width: 500px;
+                width: 1000px;
             }
         }
 
