--- a/index.html
+++ b/index.html
@@ -2,14 +2,408 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/placeOrderCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
 
     <style>
+
+        @media all and (min-width: 769px) and (max-width: 1024px){
+            #DashGroStore{
+                font-size: 30px;
+            }
+
+            #DashGroStore{
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+            }
+
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: -128px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+            }
+
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 40px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 2px;
+                top: 15.5px;
+            }
+
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 158px;
+            }
+
+
+            /*----------------------------------------------------------------------------------------------------------*/
+            .fonts{
+                font-family: Raleway;
+            }
+
+            .card{
+                width: 320px;
+                height: 178px;
+                background-color: white;
+                margin: auto;
+                border: 0;
+                margin-bottom: 5px;
+            }
+
+            .cardText{
+                text-align: center;
+                -webkit-text-fill-color: purple;
+                margin: 25px;
+                font: 25px "Raleway";
+            }
+
+            /*Search bar*/
+            .searchBarParent{
+                position: relative;
+                width: 95vw;
+                margin: 0;
+            }
+
+            #searchBar{
+                width: 81vw;
+                height: 50px;
+
+                position: absolute;
+                left: 10%;
+                top: 20px;
+            }
+
+            #searchInputField{
+                border-radius: 200px 0 0 200px;
+            }
+
+            .searchBtn{
+                border-radius: 200px;
+                width: 150px;
+                background-color: purple;
+                -webkit-text-fill-color: white;
+                border: 0;
+            }
+
+            .OrderTitle{
+                position: absolute;
+                top: 86px;
+                left: 55px;
+                font: 22px Raleway;
+                font-weight: bold;
+            }
+
+            .OrderTableHead{
+                background-color: #590067 !important;
+                -webkit-text-fill-color: white;
+                font: 18px Raleway;
+            }
+
+            .orderTableBody{
+                background-color: #FBDFFF!important;
+                -webkit-text-fill-color: black;
+            }
+
+            .orderDetailTable{
+                position: relative;
+                top: 86px;
+                margin: auto;
+
+                width: 89vw;
+            }
+
+            .tableDiv{
+                max-height: 240px; /* Set the maximum height of the container */
+                overflow-y: auto; /* Enable vertical scrolling */
+            }
+
+            .tableDiv{
+                table-layout: fixed; /* Prevent the table from resizing its columns */
+                white-space: nowrap; /* Prevent text wrapping */
+                overflow-x: auto; /* Enable horizontal scrolling */
+                overflow-y: scroll;
+            }
+
+            #viewOrderBtnParent{
+                position: relative;
+                top: 96px;
+                left: 66px;
+                width: fit-content;
+            }
+
+            .footer{
+                font-family: Raleway;
+                height: fit-content;
+                position: relative;
+                top: 8.5rem;
+            }
+
+            #mainDivF{
+                width: 100vw;
+                height: 67vh;
+                margin: 0;
+                background-color: #3A0044;
+
+                position: relative;
+                top: 5px;
+                font: 18px Raleway;
+            }
+
+            #aboutUs{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 2%;
+                left: 44%;
+            }
+
+            #fDiv1{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 25%;
+                left: 15%;
+            }
+
+            #fDiv2{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 25%;
+                left: 45%;
+            }
+
+            #fDiv3{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 25%;
+                left: 72%;
+
+                width: fit-content;
+            }
+
+            #allRights{
+                position: absolute;
+                top: 90%;
+                left: 39%;
+                -webkit-text-fill-color: white;
+            }
+
+            #groStore{
+                position: absolute;
+                top: 84.5%;
+                left: 75%;
+                -webkit-text-fill-color: white;
+
+                font-size: 35px;
+            }
+
+            #socialMedia{
+                position: absolute;
+                top: 84%;
+                left: 12%;
+            }
+
+            #facebook{
+                width: 55px;
+                aspect-ratio: 1/1;
+
+                position: relative;
+            }
+
+            #instagram{
+                width: 40px;
+                aspect-ratio: 1/1;
+
+                position: relative;
+                left: 10px;
+            }
+
+            #whatsapp{
+                width: 39px;
+                aspect-ratio: 1/1;
+
+                position: relative;
+                left: 28px;
+            }
+
+            .margin{
+                margin: 0;
+            }
+
+            .padding{
+                padding: 0;
+            }
+
+            .position{
+                position: relative;
+            }
+
+            #d1{
+                position: absolute;
+                width: fit-content;
+            }
+
+            .viewWidth{
+                width: 98vw;
+                height: 8vh;
+            }
+
+            section p{
+                margin: 0;
+            }
+
+            .padding{
+                padding: 0!important;
+            }
+
+            /*modal*/
+            .updateTitleOrder{
+                position: absolute;
+                top: 15px;
+                left: 25%;
+            }
+
+            #line1UpdateOrder{
+                width: 230px;
+                height: 1px;
+                background-color: gray;
+
+                position: relative;
+                top: -20px;
+                left: 9rem;
+            }
+
+            .subTotal{
+
+            }
+
+            .discount{
+
+            }
+
+            .balance{
+
+            }
+
+            .textAlignRight{
+                text-align: right;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+        }
+
         @media all and (min-width: 1367px) and (max-width: 1440px) {
+
+
+            #DashGroStore{
+                font-size: 30px;
+            }
+
+            #DashGroStore{
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+            }
+
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: -10px;
+            }
+
+            #dropdownList{
+                width: 250px;
+                height: 400px;
+            }
+
+            #dropdownImage{
+
+                width: 170px;
+                height: 150px;
+
+                border-radius: 100%;
+                position: relative;
+                left: 39px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 40px;
+                width: fit-content;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .headerPosition{
+                position: relative;
+                left: 152px;
+                top: 15.5px;
+            }
+
             .profile{
                 width: 78px;
                 height: 75px;
@@ -21,6 +415,262 @@
                 position: relative;
                 top: -15px;
                 left: 251px;
+            }
+
+
+            /*----------------------------------------------------------------------------------------------------------*/
+            .fonts{
+                font-family: Raleway;
+            }
+
+            .card{
+                width: 320px;
+                height: 178px;
+                background-color: white;
+                margin: auto;
+                border: 0;
+                margin-bottom: 5px;
+            }
+
+            .cardText{
+                text-align: center;
+                -webkit-text-fill-color: purple;
+                margin: 25px;
+                font: 25px "Raleway";
+            }
+
+            /*Search bar*/
+            .searchBarParent{
+                position: relative;
+                width: 95vw;
+                margin: 0;
+            }
+
+            #searchBar{
+                width: 81vw;
+                height: 50px;
+
+                position: absolute;
+                left: 10%;
+                top: 20px;
+            }
+
+            #searchInputField{
+                border-radius: 200px 0 0 200px;
+            }
+
+            .searchBtn{
+                border-radius: 200px;
+                width: 150px;
+                background-color: purple;
+                -webkit-text-fill-color: white;
+                border: 0;
+            }
+
+            .OrderTitle{
+                position: absolute;
+                top: 86px;
+                left: 55px;
+                font: 22px Raleway;
+                font-weight: bold;
+            }
+
+            .OrderTableHead{
+                background-color: #590067 !important;
+                -webkit-text-fill-color: white;
+                font: 18px Raleway;
+            }
+
+            .orderTableBody{
+                background-color: #FBDFFF!important;
+                -webkit-text-fill-color: black;
+            }
+
+            .orderDetailTable{
+                position: relative;
+                top: 86px;
+                margin: auto;
+
+                width: 89vw;
+            }
+
+            .tableDiv{
+                max-height: 240px; /* Set the maximum height of the container */
+                overflow-y: auto; /* Enable vertical scrolling */
+            }
+
+            .tableDiv{
+                table-layout: fixed; /* Prevent the table from resizing its columns */
+                white-space: nowrap; /* Prevent text wrapping */
+                overflow-x: auto; /* Enable horizontal scrolling */
+                overflow-y: scroll;
+            }
+
+            #viewOrderBtnParent{
+                position: relative;
+                top: 96px;
+                left: 66px;
+                width: fit-content;
+            }
+
+            .footer{
+                font-family: Raleway;
+                height: fit-content;
+                position: relative;
+                top: 8rem;
+            }
+
+            #mainDivF{
+                width: 100vw;
+                height: 65vh;
+                margin: 0;
+                background-color: #3A0044;
+
+                position: relative;
+                top: 5px;
+                font: 18px Raleway;
+            }
+
+            #aboutUs{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 2%;
+                left: 44%;
+            }
+
+            #fDiv1{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 25%;
+                left: 15%;
+            }
+
+            #fDiv2{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 25%;
+                left: 45%;
+            }
+
+            #fDiv3{
+                -webkit-text-fill-color: white;
+                position: absolute;
+                top: 25%;
+                left: 72%;
+
+                width: fit-content;
+            }
+
+            #allRights{
+                position: absolute;
+                top: 90%;
+                left: 39%;
+                -webkit-text-fill-color: white;
+            }
+
+            #groStore{
+                position: absolute;
+                top: 84.5%;
+                left: 75%;
+                -webkit-text-fill-color: white;
+
+                font-size: 35px;
+            }
+
+            #socialMedia{
+                position: absolute;
+                top: 84%;
+                left: 12%;
+            }
+
+            #facebook{
+                width: 55px;
+                aspect-ratio: 1/1;
+
+                position: relative;
+            }
+
+            #instagram{
+                width: 40px;
+                aspect-ratio: 1/1;
+
+                position: relative;
+                left: 10px;
+            }
+
+            #whatsapp{
+                width: 39px;
+                aspect-ratio: 1/1;
+
+                position: relative;
+                left: 28px;
+            }
+
+            .margin{
+                margin: 0;
+            }
+
+            .padding{
+                padding: 0;
+            }
+
+            .position{
+                position: relative;
+            }
+
+            #d1{
+                position: absolute;
+                width: fit-content;
+            }
+
+            .viewWidth{
+                width: 98vw;
+                height: 8vh;
+            }
+
+            section p{
+                margin: 0;
+            }
+
+            .padding{
+                padding: 0!important;
+            }
+
+            /*modal*/
+            .updateTitleOrder{
+                position: absolute;
+                top: 15px;
+                left: 25%;
+            }
+
+            #line1UpdateOrder{
+                width: 230px;
+                height: 1px;
+                background-color: gray;
+
+                position: relative;
+                top: -20px;
+                left: 9rem;
+            }
+
+            .subTotal{
+
+            }
+
+            .discount{
+
+            }
+
+            .balance{
+
+            }
+
+            .textAlignRight{
+                text-align: right;
+            }
+
+            .textAlignCenter{
+                text-align: center;
             }
         }
     </style>
