link page button click

--- a/storeManage.html
+++ b/storeManage.html
@@ -512,7 +512,6 @@
             }
         }
     </style>
-
 </head>
 <body>
 <section>
@@ -527,11 +526,11 @@
 
                     <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                         <div class="navbar-nav position container topBotomBordersIn">
-                            <a class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="index.html">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
                             <div id="profileDropdown" class="dropdown">
                                 <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
