--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -942,6 +942,7 @@
                 -webkit-text-fill-color: #590067;
             }
         }
+
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
             #GroStore{
@@ -1170,7 +1171,6 @@
             }
         }
     </style>
-
 </head>
 <body>
     <section>
@@ -1185,11 +1185,11 @@
 
                         <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                             <div class="navbar-nav position container topBotomBordersIn">
-                                <a class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                                <a class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="index.html">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
                                 <div id="profileDropdown" class="dropdown">
                                     <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
