--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <style>
 
+        @media all and (min-width: 320px) and (max-width: 768px){
+
+        }
+
         @media all and (min-width: 769px) and (max-width: 1024px){
             #DashGroStore{
                 font-size: 30px;
@@ -1021,15 +1025,15 @@
                     <p>Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</p>
                 </div>
 
-                <div id="groStore">
+                <div id="groStore" class="col-xs">
                 <p class="margin">GroStore</p>
                 </div>
-                <div id="socialMedia">
+                <div id="socialMedia" class="col-sm-4 col-xs">
                     <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
                     <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
                     <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
                 </div>
-                <div id="allRights">
+                <div id="allRights" class="col-sm-4 col-xs">
                     <p class="margin">All Rights Reserved Ramesh Layan 2024</p>
                 </div>
             </div>
