--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -718,234 +718,234 @@
             }
         }
 
-        /* Styles for Laptop Large (1025px to 1366px) */
-        @media all and (min-width: 1025px) and (max-width: 1366px) {
-            #GroStore{
-                font-size: 24px;
-                -webkit-text-fill-color: purple;
-                font-weight: bold;
-            }
+        /*!* Styles for Laptop Large (1025px to 1366px) *!*/
+        /*@media all and (min-width: 1025px) and (max-width: 1366px) {*/
+        /*    #GroStore{*/
+        /*        font-size: 24px;*/
+        /*        -webkit-text-fill-color: purple;*/
+        /*        font-weight: bold;*/
+        /*    }*/
 
-            #profileDropdown{
-                width: 75px;
-                position: relative;
-                left: -10px;
-            }
+        /*    #profileDropdown{*/
+        /*        width: 75px;*/
+        /*        position: relative;*/
+        /*        left: -10px;*/
+        /*    }*/
 
-            #dropdownList{
-                width: 250px;
-                height: 400px;
-            }
+        /*    #dropdownList{*/
+        /*        width: 250px;*/
+        /*        height: 400px;*/
+        /*    }*/
 
-            #dropdownImage{
+        /*    #dropdownImage{*/
 
-                width: 170px;
-                height: 150px;
+        /*        width: 170px;*/
+        /*        height: 150px;*/
 
-                border-radius: 100%;
-                position: relative;
-                left: 39px;
-            }
+        /*        border-radius: 100%;*/
+        /*        position: relative;*/
+        /*        left: 39px;*/
+        /*    }*/
 
-            .textAlignCenter{
-                text-align: center;
-            }
+        /*    .textAlignCenter{*/
+        /*        text-align: center;*/
+        /*    }*/
 
-            .profileDetail{
-                -webkit-text-fill-color: gray;
-                position: relative;
-                left: 40px;
-                width: fit-content;
-            }
+        /*    .profileDetail{*/
+        /*        -webkit-text-fill-color: gray;*/
+        /*        position: relative;*/
+        /*        left: 40px;*/
+        /*        width: fit-content;*/
+        /*    }*/
 
-            .signup{
-                -webkit-text-fill-color: #0066FF;
-                margin-top: 28px;
-            }
+        /*    .signup{*/
+        /*        -webkit-text-fill-color: #0066FF;*/
+        /*        margin-top: 28px;*/
+        /*    }*/
 
-            .logout{
-                text-align: center;
-                -webkit-text-fill-color: #590067;
-                font-weight: bold;
+        /*    .logout{*/
+        /*        text-align: center;*/
+        /*        -webkit-text-fill-color: #590067;*/
+        /*        font-weight: bold;*/
 
-                margin-bottom: 20px;
-            }
+        /*        margin-bottom: 20px;*/
+        /*    }*/
 
-            .headerPosition{
-                position: relative;
-                left: 152px;
-                top: 15.5px;
-            }
+        /*    .headerPosition{*/
+        /*        position: relative;*/
+        /*        left: 152px;*/
+        /*        top: 15.5px;*/
+        /*    }*/
 
-            .profile{
-                width: 78px;
-                height: 75px;
+        /*    .profile{*/
+        /*        width: 78px;*/
+        /*        height: 75px;*/
 
-                border-radius: 100%;
-                margin: 0;
-                padding: 0;
+        /*        border-radius: 100%;*/
+        /*        margin: 0;*/
+        /*        padding: 0;*/
 
-                position: relative;
-                top: -15px;
-                left: 162px;
-            }
+        /*        position: relative;*/
+        /*        top: -15px;*/
+        /*        left: 162px;*/
+        /*    }*/
 
 
-        /*  --------------------------------------------------------------------------------------------------  */
+        /*!*  --------------------------------------------------------------------------------------------------  *!*/
 
-            .titleOrder{
-                position: absolute;
-                top: 22%;
-                width: fit-content;
-            }
+        /*    .titleOrder{*/
+        /*        position: absolute;*/
+        /*        top: 22%;*/
+        /*        width: fit-content;*/
+        /*    }*/
 
-            #line1{
-                background-color: gray;
-                width: 29rem;
-                height: 1px;
+        /*    #line1{*/
+        /*        background-color: gray;*/
+        /*        width: 29rem;*/
+        /*        height: 1px;*/
 
-                opacity: 50%;
+        /*        opacity: 50%;*/
 
-                position: relative;
-                top: -20px;
-                left: 158px;
-            }
+        /*        position: relative;*/
+        /*        top: -20px;*/
+        /*        left: 158px;*/
+        /*    }*/
 
-            #line2{
-                background-color: gray;
-                width: 45rem;
-                height: 1px;
+        /*    #line2{*/
+        /*        background-color: gray;*/
+        /*        width: 45rem;*/
+        /*        height: 1px;*/
 
-                transform: rotate(90deg);
+        /*        transform: rotate(90deg);*/
 
-                opacity: 50%;
+        /*        opacity: 50%;*/
 
-                position: relative;
-                left: 21rem;
-                top: -19rem;
-            }
+        /*        position: relative;*/
+        /*        left: 21rem;*/
+        /*        top: -19rem;*/
+        /*    }*/
 
-            .margin-bottom{
-                margin-bottom: 20px;
-            }
+        /*    .margin-bottom{*/
+        /*        margin-bottom: 20px;*/
+        /*    }*/
 
-            .marginZero{
-                margin: 0;
-            }
+        /*    .marginZero{*/
+        /*        margin: 0;*/
+        /*    }*/
 
-            .inputFieldMargin{
-                margin-left: 27px;
-            }
+        /*    .inputFieldMargin{*/
+        /*        margin-left: 27px;*/
+        /*    }*/
 
-            .placeOrderForm{
-                padding: 50px;
-            }
+        /*    .placeOrderForm{*/
+        /*        padding: 50px;*/
+        /*    }*/
 
-            #addToCartBtn{
-                position: absolute;
-                right: 53.9%;
+        /*    #addToCartBtn{*/
+        /*        position: absolute;*/
+        /*        right: 53.9%;*/
 
-                background-color: #6F0082;
-                border: 0;
+        /*        background-color: #6F0082;*/
+        /*        border: 0;*/
 
-            }
+        /*    }*/
 
-            /*Billing Section*/
+        /*    !*Billing Section*!*/
 
-            .itemsDetails{
-                /*width: 612px;*/
-                margin: 40px;
+        /*    .itemsDetails{*/
+        /*        !*width: 612px;*!*/
+        /*        margin: 40px;*/
 
-                position: relative;
-                top: 7rem;
-            }
+        /*        position: relative;*/
+        /*        top: 7rem;*/
+        /*    }*/
 
-            .itemsDetails{
-                max-height: 340px; /* Set the maximum height of the container */
-                overflow-y: auto; /* Enable vertical scrolling */
-            }
+        /*    .itemsDetails{*/
+        /*        max-height: 340px; !* Set the maximum height of the container *!*/
+        /*        overflow-y: auto; !* Enable vertical scrolling *!*/
+        /*    }*/
 
-            .itemsDetails{
-                table-layout: fixed; /* Prevent the table from resizing its columns */
-                white-space: nowrap; /* Prevent text wrapping */
-                overflow-x: auto; /* Enable horizontal scrolling */
-                overflow-y: scroll;
-            }
+        /*    .itemsDetails{*/
+        /*        table-layout: fixed; !* Prevent the table from resizing its columns *!*/
+        /*        white-space: nowrap; !* Prevent text wrapping *!*/
+        /*        overflow-x: auto; !* Enable horizontal scrolling *!*/
+        /*        overflow-y: scroll;*/
+        /*    }*/
 
-            #itemPriceListMainDiv{
-                position: absolute;
-                top: 0;
-                right: 0;
-                margin-right: 38px;
-            }
+        /*    #itemPriceListMainDiv{*/
+        /*        position: absolute;*/
+        /*        top: 0;*/
+        /*        right: 0;*/
+        /*        margin-right: 38px;*/
+        /*    }*/
 
-            .prices{
-                text-align: right;
-            }
+        /*    .prices{*/
+        /*        text-align: right;*/
+        /*    }*/
 
-            .titleBill{
-                left: 35%;
-                -webkit-text-fill-color: #590067;
-                width: 200px;
-            }
+        /*    .titleBill{*/
+        /*        left: 35%;*/
+        /*        -webkit-text-fill-color: #590067;*/
+        /*        width: 200px;*/
+        /*    }*/
 
-            .fonts-size{
-                font-size: 25px;
-                width: 220px;
-            }
+        /*    .fonts-size{*/
+        /*        font-size: 25px;*/
+        /*        width: 220px;*/
+        /*    }*/
 
-            #pricesMainDiv{
-                position: relative;
-                top: 6rem;
-            }
+        /*    #pricesMainDiv{*/
+        /*        position: relative;*/
+        /*        top: 6rem;*/
+        /*    }*/
 
-            #bill{
-                position: absolute;
-                left: 50%;
-                top: 25%;
-            }
+        /*    #bill{*/
+        /*        position: absolute;*/
+        /*        left: 50%;*/
+        /*        top: 25%;*/
+        /*    }*/
 
-            .billPricesLabel{
-                width: 280px;
+        /*    .billPricesLabel{*/
+        /*        width: 280px;*/
 
-                position: absolute;
-                top: 0;
-                left: 40px;
-            }
+        /*        position: absolute;*/
+        /*        top: 0;*/
+        /*        left: 40px;*/
+        /*    }*/
 
-            .billPrices{
-                position: absolute;
-                right: 0;
-            }
+        /*    .billPrices{*/
+        /*        position: absolute;*/
+        /*        right: 0;*/
+        /*    }*/
 
-            .pricesContentPosition{
-                padding-right: 50px;
-            }
+        /*    .pricesContentPosition{*/
+        /*        padding-right: 50px;*/
+        /*    }*/
 
-            #billBtn{
-                position: relative;
-                top: 15.5rem;
-                padding-left: 12rem;
-            }
+        /*    #billBtn{*/
+        /*        position: relative;*/
+        /*        top: 15.5rem;*/
+        /*        padding-left: 12rem;*/
+        /*    }*/
 
-            .btnSize{
-                width: 150px;
-            }
+        /*    .btnSize{*/
+        /*        width: 150px;*/
+        /*    }*/
 
-            #cancelBtn{
-                background-color: #ED6400;
-                border: 0;
-            }
+        /*    #cancelBtn{*/
+        /*        background-color: #ED6400;*/
+        /*        border: 0;*/
+        /*    }*/
 
-            #purchaseBtn{
-                background-color: #03A100;
-                border: 0;
-            }
+        /*    #purchaseBtn{*/
+        /*        background-color: #03A100;*/
+        /*        border: 0;*/
+        /*    }*/
 
-            .purpleTextColor{
-                -webkit-text-fill-color: #590067;
-            }
-        }
+        /*    .purpleTextColor{*/
+        /*        -webkit-text-fill-color: #590067;*/
+        /*    }*/
+        /*}*/
 
         /* Styles for Laptop Large (1367px to 1440px) */
         @media all and (min-width: 1367px) and (max-width: 1440px) {
@@ -1195,18 +1195,18 @@
                                 <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a class="nav-link active" href="index.html">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
-                                <div id="profileDropdown" class="dropdown">
-                                    <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
+                            </div>
+                            <div id="profileDropdown" class="dropdown">
+                                <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
 
-                                    <ul id="dropdownList" class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                                        <li><img id="dropdownImage" src="assets/image/profile.jpg" class="dropdown-item"></li>
-                                        <li id="" class="textAlignCenter"><a class="dropdown-item logout" href="loginPage.html">Logout</a></li>
-                                        <li><a class="dropdown-item profileDetail">Ramesh Layan</a></li>
-                                        <li><a class="dropdown-item profileDetail">Beruwala</a></li>
-                                        <li><a class="dropdown-item profileDetail">075 798 0223</a></li>
-                                        <li class="textAlignCenter"><a class="dropdown-item signup" href="signupPage.html">Sign Up</a></li>
-                                    </ul>
-                                </div>
+                                <ul id="dropdownList" class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                                    <li><img id="dropdownImage" src="assets/image/profile.jpg" class="dropdown-item"></li>
+                                    <li id="" class="textAlignCenter"><a class="dropdown-item logout" href="loginPage.html">Logout</a></li>
+                                    <li><a class="dropdown-item profileDetail">Ramesh Layan</a></li>
+                                    <li><a class="dropdown-item profileDetail">Beruwala</a></li>
+                                    <li><a class="dropdown-item profileDetail">075 798 0223</a></li>
+                                    <li class="textAlignCenter"><a class="dropdown-item signup" href="signupPage.html">Sign Up</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
